Kubernetes/AgrOne/AgrOne-Dev/AgroByte/agrobyte-dev-airbyte-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrobyte-dev-airbyte-webapp-ingress
  namespace: agrotech-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
#        - 'www.agrocrm.prodata.local'
        - 'agrobyte-dev.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: agrobyte-dev.prodata.local
    http:
      paths:
      - backend:
          service:
            name: agrobyte-dev-airbyte-webapp-svc
            port:
              number: 80
        path: /
        pathType: Prefix
